[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.182", features = ["serde_derive"] }
serde_json = "1.0.104"
